CAWeb v1.5.6
- Added new Enable Debug Mode option
- Updated State Template from v5.5.21 to v5.5.23
- Added new vertical field for Profile Banners

CAWeb v1.5.5b
- Fixed various issues related to plugin conflicts with live drafts

CAWeb v1.5.5a
- Fixed issue with Post List Module not rendering when tags were used

CAWeb v1.5.5
- Added function for xmlrpc_enabled filter
- Added missing tabindex attribute to second level links
- Enforced WPCS on inc/functions.php
- Added new transformation to phpDoc template
- Added additional comments to files
- Added setting to phpdoc.dist.xml
- Disabled XML-RPF
- Fixed Copyright double reading
- Fixed issue with live drafts running whenever Divi triggered a Save Post
- Regenerated Font Sheet to fix share-Instagram icon to share-instagram
- Updated placeholder text to show "Search" instead of Search Homepage
- Removed "Translate" wording from Google Translate 
- Removed 404 search
- Added new Flex MegaMenu
- Added default to slide title field if using media in Section Carousel Slide(Standard/Fullwidth)
- Added default to profile link field in Profile Banner
- Added lang attribute to html element in Divi Projects 
- Removed Divi viewport meta
- Fixed Blurb Module hiding blurb image
- Fixed Tab Module (Divi) changed tabList to tablist
- Added missing title text to the following:
        Section Footer Group (Standard/Fullwidth) links
        Person Module (Divi) social links 
        Slider Module (Divi) arrows 
        Image Module (Divi) when used with link 
- Added missing alt text to the following:
        Organization Logo image 
        Gallery Module (Divi) images
        Course Post Detail Presenter image
        Event Post Detail Presenter image
        Image Module (Divi)  
- Added missing title text to the following:
        Course Post Detail map iframe
        Event Post Detail map iframe 
        Exam Post Detail map iframe

CAWeb v1.5.4
June 3, 2021
- Deprecated Template version 5.0